// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Presenter /> should render correctly 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide />,
      <Slide />,
    ]
  }
>
  <styled.div>
    <div
      className="iyCyxO"
    >
      <styled.div>
        <div
          className="gHgCes"
        >
          <styled.h2>
            <h2
              className="fztYwR"
            >
              Slide
               
              2
               
              of
               
              3
            </h2>
          </styled.h2>
          <Time
            timer={undefined}
          >
            <styled.div>
              <div
                className="brepyG"
              >
                <Clock>
                  <styled.h2>
                    <h2
                      className="hQnKlh"
                    >
                      11 : 04 : 08 AM
                    </h2>
                  </styled.h2>
                </Clock>
              </div>
            </styled.div>
          </Time>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="jjzBZm"
        >
          <styled.div>
            <div
              className="gRyZKn"
            >
              <styled.div
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main eNGgOD"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    lastSlideIndex={undefined}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
              <styled.div>
                <div
                  className="gAvcJf"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    lastSlideIndex={undefined}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
            </div>
          </styled.div>
          <styled.div>
            <div
              className="haajbE"
            >
              <undefined />
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Presenter>
`;

exports[`<Presenter /> should render timer when set in params. 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide
        notes="These are my slide notes!!"
    />,
      <Slide />,
    ]
  }
  timer={true}
>
  <styled.div>
    <div
      className="iyCyxO"
    >
      <styled.div>
        <div
          className="gHgCes"
        >
          <styled.h2>
            <h2
              className="fztYwR"
            >
              Slide
               
              2
               
              of
               
              3
            </h2>
          </styled.h2>
          <Time
            timer={true}
          >
            <styled.div>
              <div
                className="brepyG"
              >
                <Timer>
                  <div>
                    <styled.h2>
                      <h2
                        className="hQnKlh"
                      >
                        00 : 00
                      </h2>
                    </styled.h2>
                    <styled.div>
                      <div
                        className="kWjMOo"
                      >
                        <styled.button
                          onClick={[Function]}
                          start={true}
                        >
                          <button
                            className="cmEomM"
                            onClick={[Function]}
                            start={true}
                          >
                            Start
                          </button>
                        </styled.button>
                      </div>
                    </styled.div>
                  </div>
                </Timer>
              </div>
            </styled.div>
          </Time>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="jjzBZm"
        >
          <styled.div>
            <div
              className="gRyZKn"
            >
              <styled.div
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main eNGgOD"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    lastSlideIndex={undefined}
                    notes="These are my slide notes!!"
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
              <styled.div>
                <div
                  className="gAvcJf"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    lastSlideIndex={undefined}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
            </div>
          </styled.div>
          <styled.div>
            <div
              className="haajbE"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are my slide notes!!",
                  }
                }
              />
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Presenter>
`;

exports[`<Presenter /> should render with notes when slides have them. 1`] = `
<Presenter
  dispatch={[Function]}
  hash={1}
  lastSlide={0}
  route={
    Object {
      "params": Array [],
      "slide": 1,
    }
  }
  slideIndex={1}
  slideReference={
    Array [
      Object {
        "id": 0,
        "rootIndex": 0,
      },
      Object {
        "id": 1,
        "rootIndex": 1,
      },
      Object {
        "id": 2,
        "rootIndex": 2,
      },
    ]
  }
  slides={
    Array [
      <Slide />,
      <Slide
        notes="These are my slide notes!!"
    />,
      <Slide />,
    ]
  }
>
  <styled.div>
    <div
      className="iyCyxO"
    >
      <styled.div>
        <div
          className="gHgCes"
        >
          <styled.h2>
            <h2
              className="fztYwR"
            >
              Slide
               
              2
               
              of
               
              3
            </h2>
          </styled.h2>
          <Time
            timer={undefined}
          >
            <styled.div>
              <div
                className="brepyG"
              >
                <Clock>
                  <styled.h2>
                    <h2
                      className="hQnKlh"
                    >
                      11 : 04 : 08 AM
                    </h2>
                  </styled.h2>
                </Clock>
              </div>
            </styled.div>
          </Time>
        </div>
      </styled.div>
      <styled.div>
        <div
          className="jjzBZm"
        >
          <styled.div>
            <div
              className="gRyZKn"
            >
              <styled.div
                className="spectacle-presenter-main"
              >
                <div
                  className="spectacle-presenter-main eNGgOD"
                >
                  <Slide
                    dispatch={[Function]}
                    export={false}
                    hash={1}
                    key="1"
                    lastSlideIndex={undefined}
                    notes="These are my slide notes!!"
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={1}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
              <styled.div>
                <div
                  className="gAvcJf"
                >
                  <Slide
                    appearOff={true}
                    dispatch={[Function]}
                    export={false}
                    hash={2}
                    key="2"
                    lastSlideIndex={undefined}
                    presenterStyle={
                      Object {
                        "position": "relative",
                      }
                    }
                    print={false}
                    slideIndex={2}
                    transition={Array []}
                    transitionDuration={0}
                  >
                    <div>
                      Slide Content
                    </div>
                  </Slide>
                </div>
              </styled.div>
            </div>
          </styled.div>
          <styled.div>
            <div
              className="haajbE"
            >
              <div
                dangerouslySetInnerHTML={
                  Object {
                    "__html": "These are my slide notes!!",
                  }
                }
              />
            </div>
          </styled.div>
        </div>
      </styled.div>
    </div>
  </styled.div>
</Presenter>
`;
